force-app/main/default/objects/Implementation_Details_c__x/fields/Corp_RFP_Participation_c__c.field-meta.xml
<CustomField>
    <fullName>Corp_RFP_Participation_c__c</fullName>
    <externalDeveloperName>Corp_RFP_Participation__c</externalDeveloperName>
    <label>Corp RFP Participation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stand Alone</fullName>
            </value>
            <value>
                <fullName>Consortia Package Included</fullName>
            </value>
            <value>
                <fullName>Opt Out/Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>