force-app/main/default/objects/Implementation_Details_c__x/fields/Covid_Suspension_c__c.field-meta.xml
<CustomField>
    <fullName>Covid_Suspension_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Covid_Suspension__c</externalDeveloperName>
    <label>Covid Suspension</label>
    <type>Checkbox</type>
</CustomField>