force-app/main/default/objects/Implementation_Details_c__x/fields/Create_Asset_c__c.field-meta.xml
<CustomField>
    <fullName>Create_Asset_c__c</fullName>
    <externalDeveloperName>Create_Asset__c</externalDeveloperName>
    <inlineHelpText>Do you want Salesforce to automatically create the Price Position Asset?</inlineHelpText>
    <label>Create Asset</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>