force-app/main/default/objects/Implementation_Details_c__x/fields/Create_Email_Section_Case_c__c.field-meta.xml
<CustomField>
    <fullName>Create_Email_Section_Case_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Create_Email_Section_Case__c</externalDeveloperName>
    <inlineHelpText>Please, select if you want to create an Implementation Case for the Email Messages section.</inlineHelpText>
    <label>Create Email Section Case</label>
    <type>Checkbox</type>
</CustomField>