force-app/main/default/objects/Implementation_Details_c__x/fields/Currency_c__c.field-meta.xml
<CustomField>
    <fullName>Currency_c__c</fullName>
    <externalDeveloperName>Currency__c</externalDeveloperName>
    <inlineHelpText>Select the currency your contract will be presented in.</inlineHelpText>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>NZD</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>