force-app/main/default/objects/Implementation_Details_c__x/fields/Customer_Care_Handoff_Goal_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Handoff_Goal_c__c</fullName>
    <externalDeveloperName>Customer_Care_Handoff_Goal__c</externalDeveloperName>
    <label>Customer Care Handoff Goal</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>