force-app/main/default/objects/Implementation_Details_c__x/fields/Date_to_send_Client_Activation_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Date_to_send_Client_Activation_Email_c__c</fullName>
    <externalDeveloperName>Date_to_send_Client_Activation_Email__c</externalDeveloperName>
    <inlineHelpText>What date should the automatic client activation reminder email be sent?</inlineHelpText>
    <label>Date to send Client Activation Email</label>
    <type>Date</type>
</CustomField>