force-app/main/default/objects/Implementation_Details_c__x/fields/Demand_Services_c__c.field-meta.xml
<CustomField>
    <fullName>Demand_Services_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Demand_Services__c</externalDeveloperName>
    <label>Demand Services</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>