force-app/main/default/objects/Implementation_Details_c__x/fields/DerbySoft_c__c.field-meta.xml
<CustomField>
    <fullName>DerbySoft_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>DerbySoft__c</externalDeveloperName>
    <label>Distribution Services R</label>
    <type>Checkbox</type>
</CustomField>