force-app/main/default/objects/Implementation_Details_c__x/fields/Development_c__c.field-meta.xml
<CustomField>
    <fullName>Development_c__c</fullName>
    <externalDeveloperName>Development__c</externalDeveloperName>
    <label>Development</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Waiting on Vendor</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>QA Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>