force-app/main/default/objects/Implementation_Details_c__x/fields/Development_Start_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Development_Start_Date_c__c</fullName>
    <externalDeveloperName>Development_Start_Date__c</externalDeveloperName>
    <label>Development Start Date</label>
    <type>Date</type>
</CustomField>