force-app/main/default/objects/Implementation_Details_c__x/fields/Digital_Media_Campaign_Exists_c__c.field-meta.xml
<CustomField>
    <fullName>Digital_Media_Campaign_Exists_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Digital_Media_Campaign_Exists__c</externalDeveloperName>
    <inlineHelpText>Do we have a Digital Media Campaign running?</inlineHelpText>
    <label>Digital Media Campaign Exists</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>