force-app/main/default/objects/Implementation_Details_c__x/fields/Digital_Media_Campaign_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>Digital_Media_Campaign_Manager_c__c</fullName>
    <externalDeveloperName>Digital_Media_Campaign_Manager__c</externalDeveloperName>
    <label>Digital Media Campaign Manager</label>
    <length>18</length>
    <type>Text</type>
</CustomField>