force-app/main/default/objects/Implementation_Details_c__x/fields/Distribution_Channel_c__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel_c__c</fullName>
    <externalDeveloperName>Distribution_Channel__c</externalDeveloperName>
    <inlineHelpText>IM to select the channel that will be implemented</inlineHelpText>
    <label>Distribution Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Derbysoft</fullName>
            </value>
            <value>
                <fullName>IBS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>