force-app/main/default/objects/Implementation_Details_c__x/fields/Distribution_Services_c__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Services_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Distribution_Services__c</externalDeveloperName>
    <label>Distribution Services W</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>