force-app/main/default/objects/Implementation_Details_c__x/fields/Do_not_change_Impl_Manager_IH_Page_c__c.field-meta.xml
<CustomField>
    <fullName>Do_not_change_Impl_Manager_IH_Page_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Do_not_change_Impl_Manager_IH_Page__c</externalDeveloperName>
    <inlineHelpText>*SELECT to update IMPL MGR Name for Service in IH Page.
*NOT SELECT to update IMPL MGR Name for Service + IH Impl Manager or Term/Rebuild IM or Addendum IM 

*If Service STATUS is NEW or BLANK, system will assign IM and will remove IH page Service Info</inlineHelpText>
    <label>Reassign IM only in this Service</label>
    <type>Checkbox</type>
</CustomField>