force-app/main/default/objects/Implementation_Details_c__x/fields/E_Mail_Marketing_Reporting_c__c.field-meta.xml
<CustomField>
    <fullName>E_Mail_Marketing_Reporting_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>E_Mail_Marketing_Reporting__c</externalDeveloperName>
    <label>E-Mail Marketing &amp; Reporting</label>
    <type>Checkbox</type>
</CustomField>