force-app/main/default/objects/Implementation_Details_c__x/fields/Email_Marketing_c__c.field-meta.xml
<CustomField>
    <fullName>Email_Marketing_c__c</fullName>
    <externalDeveloperName>Email_Marketing__c</externalDeveloperName>
    <inlineHelpText>Has Email Marketing been Purchased?</inlineHelpText>
    <label>Email Marketing</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>