force-app/main/default/objects/Implementation_Details_c__x/fields/Email_Marketing_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Email_Marketing_Status_c__c</fullName>
    <externalDeveloperName>Email_Marketing_Status__c</externalDeveloperName>
    <inlineHelpText>What is the GMS Email Marketing task Status?</inlineHelpText>
    <label>Email Marketing Status</label>
    <length>250</length>
    <type>Text</type>
</CustomField>