force-app/main/default/objects/Implementation_Details_c__x/fields/Email_section_Case_c__c.field-meta.xml
<CustomField>
    <fullName>Email_section_Case_c__c</fullName>
    <externalDeveloperName>Email_section_Case__c</externalDeveloperName>
    <label>Email section Case</label>
    <length>18</length>
    <type>Text</type>
</CustomField>