force-app/main/default/objects/Implementation_Details_c__x/fields/EMC_access_c__c.field-meta.xml
<CustomField>
    <fullName>EMC_access_c__c</fullName>
    <externalDeveloperName>EMC_access__c</externalDeveloperName>
    <label>EMC access</label>
    <type>Date</type>
</CustomField>