force-app/main/default/objects/Implementation_Details_c__x/fields/EMC_Primary_Administrator_c__c.field-meta.xml
<CustomField>
    <fullName>EMC_Primary_Administrator_c__c</fullName>
    <externalDeveloperName>EMC_Primary_Administrator__c</externalDeveloperName>
    <label>EMC Primary Administrator</label>
    <length>18</length>
    <type>Text</type>
</CustomField>