force-app/main/default/objects/Implementation_Details_c__x/fields/EQC_c__c.field-meta.xml
<CustomField>
    <fullName>EQC_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>EQC__c</externalDeveloperName>
    <label>EQC</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>