force-app/main/default/objects/Implementation_Details_c__x/fields/Estimated_Live_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Live_Date_c__c</fullName>
    <externalDeveloperName>Estimated_Live_Date__c</externalDeveloperName>
    <label>Estimated Live Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>