force-app/main/default/objects/Implementation_Details_c__x/fields/Final_Testing_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Final_Testing_Date_c__c</fullName>
    <externalDeveloperName>Final_Testing_Date__c</externalDeveloperName>
    <label>Final Testing Date</label>
    <type>Date</type>
</CustomField>