force-app/main/default/objects/Implementation_Details_c__x/fields/Final_Testing_Live_Goal_c__c.field-meta.xml
<CustomField>
    <fullName>Final_Testing_Live_Goal_c__c</fullName>
    <externalDeveloperName>Final_Testing_Live_Goal__c</externalDeveloperName>
    <label>Final Testing Live Goal</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>