force-app/main/default/objects/Implementation_Details_c__x/fields/First_ROI_Report_Request_Date_c__c.field-meta.xml
<CustomField>
    <fullName>First_ROI_Report_Request_Date_c__c</fullName>
    <externalDeveloperName>First_ROI_Report_Request_Date__c</externalDeveloperName>
    <inlineHelpText>When do you want to generate first ROI Report Request to ROI Team?</inlineHelpText>
    <label>First ROI Report Request Date</label>
    <type>Date</type>
</CustomField>