force-app/main/default/objects/Implementation_Details_c__x/fields/Forms_Received_Alternate_Payment_c__c.field-meta.xml
<CustomField>
    <fullName>Forms_Received_Alternate_Payment_c__c</fullName>
    <externalDeveloperName>Forms_Received_Alternate_Payment__c</externalDeveloperName>
    <label>Forms Received- Alternate Payment</label>
    <type>Date</type>
</CustomField>