force-app/main/default/objects/Implementation_Details_c__x/fields/Forms_Received_ASM_c__c.field-meta.xml
<CustomField>
    <fullName>Forms_Received_ASM_c__c</fullName>
    <externalDeveloperName>Forms_Received_ASM__c</externalDeveloperName>
    <label>Forms Received- ASM</label>
    <type>Date</type>
</CustomField>