force-app/main/default/objects/Implementation_Details_c__x/fields/Forms_Received_CCP_c__c.field-meta.xml
<CustomField>
    <fullName>Forms_Received_CCP_c__c</fullName>
    <externalDeveloperName>Forms_Received_CCP__c</externalDeveloperName>
    <inlineHelpText>date when the boarding form is received from client</inlineHelpText>
    <label>Forms Received- CCP</label>
    <type>Date</type>
</CustomField>