force-app/main/default/objects/Implementation_Details_c__x/fields/Forms_Received_Cookie_c__c.field-meta.xml
<CustomField>
    <fullName>Forms_Received_Cookie_c__c</fullName>
    <externalDeveloperName>Forms_Received_Cookie__c</externalDeveloperName>
    <inlineHelpText>date when the implementation questionnaire is received back from client. Form should be completed with all the necessary data. The form received date should be updated with the date when the most completed version of the form is received back.</inlineHelpText>
    <label>Forms Received- Cookie</label>
    <type>Date</type>
</CustomField>