force-app/main/default/objects/Implementation_Details_c__x/fields/Forms_Received_Date_PMS_c__c.field-meta.xml
<CustomField>
    <fullName>Forms_Received_Date_PMS_c__c</fullName>
    <externalDeveloperName>Forms_Received_Date_PMS__c</externalDeveloperName>
    <label>Forms Received Date- PMS</label>
    <type>Date</type>
</CustomField>