force-app/main/default/objects/Implementation_Details_c__x/fields/Forms_Received_RMS_c__c.field-meta.xml
<CustomField>
    <fullName>Forms_Received_RMS_c__c</fullName>
    <externalDeveloperName>Forms_Received_RMS__c</externalDeveloperName>
    <inlineHelpText>date when the RMS correlation table is received back from client. Table should be completed with all the necessary data. The form received date should be updated with the date when the most completed version of the form is received back.</inlineHelpText>
    <label>Forms Received- RMS</label>
    <type>Date</type>
</CustomField>