force-app/main/default/objects/Implementation_Details_c__x/fields/Forms_received_to_Contract_Start_date_c__c.field-meta.xml
<CustomField>
    <fullName>Forms_received_to_Contract_Start_date_c__c</fullName>
    <externalDeveloperName>Forms_received_to_Contract_Start_date__c</externalDeveloperName>
    <label>Forms received to Contract Start date</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>1</scale>
    <type>Number</type>
</CustomField>