force-app/main/default/objects/Implementation_Details_c__x/fields/Forms_Received_with_Contract_picklist_c__c.field-meta.xml
<CustomField>
    <fullName>Forms_Received_with_Contract_picklist_c__c</fullName>
    <externalDeveloperName>Forms_Received_with_Contract_picklist__c</externalDeveloperName>
    <inlineHelpText>Have BI Forms been received with Contract?</inlineHelpText>
    <label>Forms Received with Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>