force-app/main/default/objects/Implementation_Details_c__x/fields/Forms_Sent_Air_c__c.field-meta.xml
<CustomField>
    <fullName>Forms_Sent_Air_c__c</fullName>
    <externalDeveloperName>Forms_Sent_Air__c</externalDeveloperName>
    <inlineHelpText>Date when the IM sends the Air+Hotel implementation form to client</inlineHelpText>
    <label>Forms Sent- Air</label>
    <type>Date</type>
</CustomField>