force-app/main/default/objects/Implementation_Details_c__x/fields/Forms_sent_Alternate_Payment_c__c.field-meta.xml
<CustomField>
    <fullName>Forms_sent_Alternate_Payment_c__c</fullName>
    <externalDeveloperName>Forms_sent_Alternate_Payment__c</externalDeveloperName>
    <inlineHelpText>Date when the IM sends the email to request the needed information to complete the setup</inlineHelpText>
    <label>Email sent- Alternate Payment</label>
    <type>Date</type>
</CustomField>