force-app/main/default/objects/Implementation_Details_c__x/fields/Forms_Sent_ASM_c__c.field-meta.xml
<CustomField>
    <fullName>Forms_Sent_ASM_c__c</fullName>
    <externalDeveloperName>Forms_Sent_ASM__c</externalDeveloperName>
    <label>Forms Sent - ASM</label>
    <type>Date</type>
</CustomField>