force-app/main/default/objects/Implementation_Details_c__x/fields/Forms_sent_Call_Center_c__c.field-meta.xml
<CustomField>
    <fullName>Forms_sent_Call_Center_c__c</fullName>
    <externalDeveloperName>Forms_sent_Call_Center__c</externalDeveloperName>
    <label>Forms sent- Call Center</label>
    <type>Date</type>
</CustomField>