force-app/main/default/objects/Implementation_Details_c__x/fields/Forms_Sent_CCP_c__c.field-meta.xml
<CustomField>
    <fullName>Forms_Sent_CCP_c__c</fullName>
    <externalDeveloperName>Forms_Sent_CCP__c</externalDeveloperName>
    <inlineHelpText>date when the boarding form is sent to client</inlineHelpText>
    <label>Forms Sent- CCP</label>
    <type>Date</type>
</CustomField>