force-app/main/default/objects/Implementation_Details_c__x/fields/Forms_Sent_EQC_c__c.field-meta.xml
<CustomField>
    <fullName>Forms_Sent_EQC_c__c</fullName>
    <externalDeveloperName>Forms_Sent_EQC__c</externalDeveloperName>
    <inlineHelpText>date when the mapping form is sent to client</inlineHelpText>
    <label>Forms Sent- EQC</label>
    <type>Date</type>
</CustomField>