force-app/main/default/objects/Implementation_Details_c__x/fields/Forms_Sent_PMS_Channel_c__c.field-meta.xml
<CustomField>
    <fullName>Forms_Sent_PMS_Channel_c__c</fullName>
    <externalDeveloperName>Forms_Sent_PMS_Channel__c</externalDeveloperName>
    <label>Forms Sent- PMS Channel</label>
    <type>Date</type>
</CustomField>