force-app/main/default/objects/Implementation_Details_c__x/fields/Forms_Sent_RMS_c__c.field-meta.xml
<CustomField>
    <fullName>Forms_Sent_RMS_c__c</fullName>
    <externalDeveloperName>Forms_Sent_RMS__c</externalDeveloperName>
    <inlineHelpText>date when the RMS correlation table is sent to client</inlineHelpText>
    <label>Forms Sent- RMS</label>
    <type>Date</type>
</CustomField>