force-app/main/default/objects/Implementation_Details_c__x/fields/Forms_to_Live_Time_del_c__c.field-meta.xml
<CustomField>
    <fullName>Forms_to_Live_Time_del_c__c</fullName>
    <externalDeveloperName>Forms_to_Live_Time_del__c</externalDeveloperName>
    <label>Forms to Live Time</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>