force-app/main/default/objects/Implementation_Details_c__x/fields/Free_Months_c__c.field-meta.xml
<CustomField>
    <fullName>Free_Months_c__c</fullName>
    <externalDeveloperName>Free_Months__c</externalDeveloperName>
    <label># Free Months</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>