force-app/main/default/objects/Implementation_Details_c__x/fields/GDS_Media_Campaign_Manager_formula_c__c.field-meta.xml
<CustomField>
    <fullName>GDS_Media_Campaign_Manager_formula_c__c</fullName>
    <externalDeveloperName>GDS_Media_Campaign_Manager_formula__c</externalDeveloperName>
    <label>GDS Media Campaign Manager</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>