force-app/main/default/objects/Implementation_Details_c__x/fields/Get_Forms_Sent_Received_Live_IH_Page_c__c.field-meta.xml
<CustomField>
    <fullName>Get_Forms_Sent_Received_Live_IH_Page_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Get_Forms_Sent_Received_Live_IH_Page__c</externalDeveloperName>
    <label>Get Forms Sent/Received/Live IH Page</label>
    <type>Checkbox</type>
</CustomField>