force-app/main/default/objects/Implementation_Details_c__x/fields/GMS_Add_Ons_c__c.field-meta.xml
<CustomField>
    <fullName>GMS_Add_Ons_c__c</fullName>
    <externalDeveloperName>GMS_Add_Ons__c</externalDeveloperName>
    <label>GMS Inclusions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Creative Work</fullName>
            </value>
            <value>
                <fullName>Deduplication</fullName>
            </value>
            <value>
                <fullName>E-mail Marketing &amp; Reporting</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
                <label>Loyalty Program</label>
            </value>
            <value>
                <fullName>Mobile Passport</fullName>
            </value>
            <value>
                <fullName>Shopping Cart Abandonment</fullName>
                <label>Cart Abandonment</label>
            </value>
            <value>
                <fullName>PMS-GMS Integration</fullName>
            </value>
            <value>
                <fullName>Pre &amp; Post-Stay Confirmation Cancellation</fullName>
            </value>
            <value>
                <fullName>Guest Satisfaction Post-Stay Surveys &amp; Reporting</fullName>
            </value>
            <value>
                <fullName>Room Upgrade Engine</fullName>
            </value>
            <value>
                <fullName>Remarketing</fullName>
            </value>
            <value>
                <fullName>Guest Portal</fullName>
            </value>
            <value>
                <fullName>Guest Messenger</fullName>
            </value>
            <value>
                <fullName>3rd Party Connection</fullName>
            </value>
            <value>
                <fullName>GuestView360 Property Edition</fullName>
            </value>
            <value>
                <fullName>GuestView360 Enterprise Edition</fullName>
            </value>
            <value>
                <fullName>Custom Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>