force-app/main/default/objects/Implementation_Details_c__x/fields/GMS_c__c.field-meta.xml
<CustomField>
    <fullName>GMS_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>GMS__c</externalDeveloperName>
    <label>GMS</label>
    <type>Checkbox</type>
</CustomField>