force-app/main/default/objects/Implementation_Details_c__x/fields/GMS_Primary_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>GMS_Primary_Contact_c__c</fullName>
    <externalDeveloperName>GMS_Primary_Contact__c</externalDeveloperName>
    <label>GMS Primary Contact</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>