force-app/main/default/objects/Implementation_Details_c__x/fields/GMS_Product_Name_c__c.field-meta.xml
<CustomField>
    <fullName>GMS_Product_Name_c__c</fullName>
    <externalDeveloperName>GMS_Product_Name__c</externalDeveloperName>
    <label>GMS Product Name</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>