force-app/main/default/objects/Implementation_Details_c__x/fields/GMS_Revenue_Date_Set_c__c.field-meta.xml
<CustomField>
    <fullName>GMS_Revenue_Date_Set_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>GMS_Revenue_Date_Set__c</externalDeveloperName>
    <label>GMS Revenue Date Set</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>