force-app/main/default/objects/Implementation_Details_c__x/fields/GMS_Services_c__c.field-meta.xml
<CustomField>
    <fullName>GMS_Services_c__c</fullName>
    <externalDeveloperName>GMS_Services__c</externalDeveloperName>
    <label>GMS Services</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>