force-app/main/default/objects/Implementation_Details_c__x/fields/GMS_Status_c__c.field-meta.xml
<CustomField>
    <fullName>GMS_Status_c__c</fullName>
    <externalDeveloperName>GMS_Status__c</externalDeveloperName>
    <label>GMS Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>