force-app/main/default/objects/Implementation_Details_c__x/fields/Go_Live_Recap_Upload_Complete_c__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Recap_Upload_Complete_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Go_Live_Recap_Upload_Complete__c</externalDeveloperName>
    <label>Go Live Recap Upload Complete</label>
    <type>Checkbox</type>
</CustomField>