force-app/main/default/objects/Implementation_Details_c__x/fields/Go_Live_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Status_c__c</fullName>
    <externalDeveloperName>Go_Live_Status__c</externalDeveloperName>
    <label>Go Live Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>