force-app/main/default/objects/Implementation_Details_c__x/fields/Grant_User_Access_c__c.field-meta.xml
<CustomField>
    <fullName>Grant_User_Access_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Grant_User_Access__c</externalDeveloperName>
    <label>Grant User Access</label>
    <type>Checkbox</type>
</CustomField>