force-app/main/default/objects/Implementation_Details_c__x/fields/GTM_revisions_completed_c__c.field-meta.xml
<CustomField>
    <fullName>GTM_revisions_completed_c__c</fullName>
    <externalDeveloperName>GTM_revisions_completed__c</externalDeveloperName>
    <inlineHelpText>Date when GTM revisions was completed</inlineHelpText>
    <label>GTM Revisions Completed</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>