force-app/main/default/objects/Implementation_Details_c__x/fields/GTM_set_up_completed_c__c.field-meta.xml
<CustomField>
    <fullName>GTM_set_up_completed_c__c</fullName>
    <externalDeveloperName>GTM_set_up_completed__c</externalDeveloperName>
    <inlineHelpText>Date when GTM set-up was completed</inlineHelpText>
    <label>GTM Set-Up Completed</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>