force-app/main/default/objects/Implementation_Details_c__x/fields/Guest_Messenger_c__c.field-meta.xml
<CustomField>
    <fullName>Guest_Messenger_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Guest_Messenger__c</externalDeveloperName>
    <label>Guest Messenger</label>
    <type>Checkbox</type>
</CustomField>