force-app/main/default/objects/Implementation_Details_c__x/fields/Guest_Portal_c__c.field-meta.xml
<CustomField>
    <fullName>Guest_Portal_c__c</fullName>
    <externalDeveloperName>Guest_Portal__c</externalDeveloperName>
    <inlineHelpText>Has Guest Portal been Purchased?</inlineHelpText>
    <label>Guest Portal</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>