force-app/main/default/objects/Implementation_Details_c__x/fields/Guest_Portal_Service_c__c.field-meta.xml
<CustomField>
    <fullName>Guest_Portal_Service_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Guest_Portal_Service__c</externalDeveloperName>
    <label>Guest Portal</label>
    <type>Checkbox</type>
</CustomField>