force-app/main/default/objects/Implementation_Details_c__x/fields/GuestView360_Property_Edition_c__c.field-meta.xml
<CustomField>
    <fullName>GuestView360_Property_Edition_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>GuestView360_Property_Edition__c</externalDeveloperName>
    <label>GuestView360 Property Edition</label>
    <type>Checkbox</type>
</CustomField>