force-app/main/default/objects/Implementation_Details_c__x/fields/Hilton_GRO_Hotel_c__c.field-meta.xml
<CustomField>
    <fullName>Hilton_GRO_Hotel_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Hilton_GRO_Hotel__c</externalDeveloperName>
    <label>Hilton GRO Hotel</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>