force-app/main/default/objects/Implementation_Details_c__x/fields/IGT_Completed_Date_GDS_c__c.field-meta.xml
<CustomField>
    <fullName>IGT_Completed_Date_GDS_c__c</fullName>
    <externalDeveloperName>IGT_Completed_Date_GDS__c</externalDeveloperName>
    <label>IGT Completed Date- GDS</label>
    <type>Date</type>
</CustomField>