force-app/main/default/objects/Implementation_Details_c__x/fields/IGT_Return_Estimated_Date_c__c.field-meta.xml
<CustomField>
    <fullName>IGT_Return_Estimated_Date_c__c</fullName>
    <externalDeveloperName>IGT_Return_Estimated_Date__c</externalDeveloperName>
    <label>IGT Estimated Return Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>