force-app/main/default/objects/Implementation_Details_c__x/fields/IGT_to_Setup_c__c.field-meta.xml
<CustomField>
    <fullName>IGT_to_Setup_c__c</fullName>
    <externalDeveloperName>IGT_to_Setup__c</externalDeveloperName>
    <inlineHelpText>IM to select the services that IGT should set up</inlineHelpText>
    <label>IGT to Setup</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Additional language</fullName>
            </value>
            <value>
                <fullName>Booking Engine &amp; Console</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Pegasus</fullName>
                <label>DHISCO</label>
            </value>
            <value>
                <fullName>HOD Update</fullName>
            </value>
            <value>
                <fullName>iHotelier</fullName>
            </value>
            <value>
                <fullName>Lanyon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>