force-app/main/default/objects/Implementation_Details_c__x/fields/IHOS_c__c.field-meta.xml
<CustomField>
    <fullName>IHOS_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IHOS__c</externalDeveloperName>
    <label>IHOS</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>