force-app/main/default/objects/Implementation_Details_c__x/fields/iHos_Connectivity_Complete_Air_c__c.field-meta.xml
<CustomField>
    <fullName>iHos_Connectivity_Complete_Air_c__c</fullName>
    <externalDeveloperName>iHos_Connectivity_Complete_Air__c</externalDeveloperName>
    <inlineHelpText>Date when Reverse hotel is mapped and tested in IHOS.</inlineHelpText>
    <label>IHOS Mapping Complete- Air</label>
    <type>Date</type>
</CustomField>