force-app/main/default/objects/Implementation_Details_c__x/fields/IHOS_Implementation_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>IHOS_Implementation_Manager_c__c</fullName>
    <externalDeveloperName>IHOS_Implementation_Manager__c</externalDeveloperName>
    <label>IHOS Implementation Manager</label>
    <length>18</length>
    <type>Text</type>
</CustomField>