force-app/main/default/objects/Implementation_Details_c__x/fields/iHotelier_c__c.field-meta.xml
<CustomField>
    <fullName>iHotelier_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>iHotelier__c</externalDeveloperName>
    <label>iHotelier</label>
    <type>Checkbox</type>
</CustomField>