force-app/main/default/objects/Implementation_Details_c__x/fields/iHotelier_Status_c__c.field-meta.xml
<CustomField>
    <fullName>iHotelier_Status_c__c</fullName>
    <externalDeveloperName>iHotelier_Status__c</externalDeveloperName>
    <label>iHotelier Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>